<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:elevation="20dp"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:background="@drawable/background2"
    tools:ignore="HardcodedText">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="Hospital Management"
        tools:ignore="HardcodedText" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <ImageView
        android:layout_width="296dp"
        android:layout_height="102dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/medical_team" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:id="@+id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:maxLength="31"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:inputType="textEmailAddress"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/passwordInputLayout"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="SIGN IN"
        android:background="@drawable/round_btn"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Forgot Password?"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Don't have an account?"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            tools:ignore="SpUsage" />


    </LinearLayout>

</LinearLayout>
